test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_parse/return_array.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[9]:
  int
  identifier(foo)
  (
  void
  )
  [
  const int(3)
  ]
  ;
